--- a/Week5/.gitignore
+++ b/Week5/.gitignore
@@ -1,2 +1,10 @@
 GIS_Notes
 Rplots.pdf
+*.shp
+
+
+## for data folder
+data/National_Trails_Pennine_Way.gpx
+data/ne_10m_admin_0_countries
+data/ne_110m_admin_0_countries
+data/wc10
